# tree-sitter-elisp

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: main.yml
bindings/c/: tree-sitter-elisp.h  tree-sitter-elisp.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_elisp/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
test/highlight/: functions.el
