[package]
name = "tree-sitter-elisp"
description = "Emacs Lisp tree-sitter grammar"
version = "1.7.0"
keywords = ["incremental", "parsing", "tree-sitter", "elisp"]
categories = ["parser-implementations", "parsing", "text-editors"]
authors = ["Wilfred Hughes <me@wilfred.me.uk>"]
repository = "https://github.com/Wilfred/tree-sitter-elisp"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
